<resources>
    <string name="genius">Genius</string>
    <string name="course">Course</string>
    <string name="forum">Forum</string>
    <string name="quiz">Quiz</string>
    <string name="stats">Stats</string>
    <string name="search">Search</string>
    <string name="aboutUs">About Us</string>
    <string name="accSettings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="recent">RECENT</string>
    <string name="whatsHot">WHAT\'S HOT</string>
    <string name="submit">Submit</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="result">Result</string>

    <string name="computerScience">

        Learn the key ideas of computer science with this interactive course - no coding required!\n\n
        This course is ideal for a high school or college\n\n
        hahahahhaha\n\n
        HIHIHIHI\n\n
        HOHOHOHO\n\n


    </string>

    <string name="topicCover">
        Binary\n
        Logic Gates\n
        Propositional Logic\n
        De morgan’s Laws\n

    </string>

    <string name="topicContent">
        Binary\n\n
        What is Binary ? Binary is a base 2 number system invented by\n\n
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="BinaryContent">
        What is Binary ? Binary is a base 2 number system invented by Gottfried Leibniz that is made up of only two numbers: 0 and 1.
        This number system is the basis for all binary code, which is used to write data such as the computer processor instructions used every day.

    </string>


    <string name="app_name">LoginPage</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="hello">Hello There!</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="not_member">Not a member?</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="forgot_password_text">Forgot your password?No worries, please enter your
                                        e-mail address and you will be able to reset your
        password in no time. Any questions, please e-mail us at <font fgcolor="#173172"><u>geniuslearningapp@gmail.com</u></font></string>
    <string name="forgot_pw_email">Send Email</string>
    <string name="register_page">Register</string>
    <string name="confirm_pw">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday (DD-MM-YYYY)</string>
    <string name="register_account">Create Account</string>
    <string name="existing_user">Existing User?</string>
    <string name="log_in">Log In</string>
    <string name="terms_condition">By tapping "Create Account", you have agree to Genius </string>
    <string name="terms">Terms of Service and Privacy Policy</string>
</resources>
