<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imageView_course"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_science"
                tools:ignore="VectorDrawableCompat" />

            <Button
                android:id="@+id/btnStartCourse"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/course_button"
                android:backgroundTint="@android:color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="Start Course"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:text="Overview"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_overview_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/roboto"
                android:padding="10dp"
                android:text="@string/computerScience"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_topicCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Topic Covered"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/roboto"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:text="@string/topicCover" />

            <TextView
                android:id="@+id/TopicOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="Binary"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnTopicOne"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/course_button"
                android:backgroundTint="@android:color/white"
                android:drawableTop="@drawable/ic_science"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/topicContent"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>